--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,6 +1,7 @@
 // Your styles go here
 :root {
   body {
-    background-color: lightcyan;
+    background-color: green;
+    color: white;
   }
 }
